# fedboard

./: index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CopiedItemBlock.tsx  SearchBar.tsx
src/stores/: ClipboardStore.ts
